# OI-Venture

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  xmake.lua
data/shader/: default.glsl
doc/: code.md  credit.md  install.md  style.md  xmake.md
include/graphics/: blend_mode.h  color.h  default_shader.h  drawable.h  drawable_child.h  image.h  render_context.h  render_state.h  render_target.h  shader.h  sokol.h  sprite.h  texture.h  transformable.h
include/system/: math.h  vector.h
include/window/: file.h  keyboard.h  mouse.h  window.h
lib/flecs/: xmake.lua
lib/sokol/: xmake.lua
lib/sokol/include/: sokol_fetch.h
src/: main.c  main.cpp
src/engine/: assets.c  assets.h  draw.c  draw.h  transform.c  transform.h  window.c  window.h
src/graphics/: blend_mode.c  color.c  drawable.c  drawable_child.c  image.c  render_context.c  render_state.c  render_target.c  shader.c  sprite.c  texture.c  transformable.c
src/system/: math.c  vector.c
src/utils/: array.h  gfx.h  tools.h
src/window/: file.c  keyboard.c  mouse.c  window.c
tool/: generate_c.py  generate_h.py
